python3.9 (3.9.7-2) UNRELEASED; urgency=medium

  * Fix CFLAGS in the python3.x-config scripts. Closes: #992669, #989000.
  * Support arc-linux-gnu in the multiarch header. Closes: #992091.
  * Don't run the test_concurrent_futures test on alpha. Closes: #991110.
  * Fix path to mkdir on a unified-/usr system. Closes: #992775.

 -- Matthias Klose <doko@debian.org>  Thu, 02 Sep 2021 14:55:55 +0200

python3.9 (3.9.7-1) unstable; urgency=medium

  * Python 3.9.7 release.

 -- Matthias Klose <doko@debian.org>  Tue, 31 Aug 2021 15:27:14 +0200

python3.9 (3.9.6-1) experimental; urgency=medium

  * Python 3.9.6 release.
  * Refresh patches.

 -- Matthias Klose <doko@debian.org>  Tue, 29 Jun 2021 12:19:25 +0200

python3.9 (3.9.5-3) experimental; urgency=medium

  * Tighten python3-tk autopkg test dependency.
  * Try to detect whether python3-venv is missing (Stefano Rivera).
    Closes: #977887.

 -- Matthias Klose <doko@debian.org>  Tue, 11 May 2021 08:26:08 +0200

python3.9 (3.9.5-2) experimental; urgency=medium

  * Re-add the dependency on libdb-dev.  With Python 3.10, building
    the _dbm extension using libgdbm-compat-dev, and moving the _dbm
    extension into the python3-gdbm package.
  * Call python with -S when checking the minimal set of modules.

 -- Matthias Klose <doko@debian.org>  Thu, 06 May 2021 11:11:34 +0200

python3.9 (3.9.5-1) experimental; urgency=medium

  * Python 3.9.5 release.
  * Refresh patches.
  * Drop the unused build dependency on libdb-dev.

 -- Matthias Klose <doko@debian.org>  Tue, 04 May 2021 06:08:53 +0200

python3.9 (3.9.4-1) experimental; urgency=medium

  * Python 3.9.4 release.

 -- Matthias Klose <doko@debian.org>  Sun, 04 Apr 2021 21:38:44 +0200

python3.9 (3.9.3-2) experimental; urgency=high

  * Fix flags substitutions for _sysconfigdata.
  * Revert the fix for issue #42500, breaking ABI on 32bit architectures.

 -- Matthias Klose <doko@debian.org>  Sun, 04 Apr 2021 11:36:06 +0200
