@@ -584,7 +584,7 @@ else
 	: # build locales needed by the testsuite
 	rm -rf locales
 	mkdir locales
-	if which localedef >/dev/null 2>&1; then \
+	if command -v localedef >/dev/null 2>&1; then \
 	  sh debian/locale-gen; \
 	fi
 
